--- a/index.html
+++ b/index.html
@@ -68,90 +68,100 @@
         </header>
 
         <!-- GŁÓWNA TREŚĆ (Siatka z ofertami BOGO) -->
-        <main id="main-content-container" class="relative z-10 grid grid-cols-1 md:grid-cols-2 gap-8 p-2">
+        <main id="main-content-container" class="relative z-10 grid grid-cols-1 lg:grid-cols-2 gap-6 p-2">
 
             <!-- KARTA BOGO 1 -->
-            <div id="bogo-card-1" class="bg-white p-4 rounded-lg shadow-lg border-2 border-transparent flex flex-col">
-                <div class="flex justify-between items-start mb-3">
-                    <h3 class="text-lg font-semibold text-[#4a5c44] w-2/3">Peppermint + Wild Orange</h3>
-                    <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-sm">139,75 zł</span>
+            <div id="bogo-card-1" class="bg-white p-3 rounded-lg shadow-lg border-2 border-transparent flex items-center gap-4">
+                <div class="flex-shrink-0 flex items-center justify-center gap-2 w-1/3">
+                    <img id="bogo1-a-img" src="images/bogo1-a.png" alt="Produkt 1A" class="h-20 object-contain">
+                    <img id="bogo1-b-img" src="images/bogo1-b.png" alt="Produkt 1B" class="h-20 object-contain">
                 </div>
-                <div class="flex justify-center items-center gap-4 h-32 mb-4">
-                    <img id="bogo1-a-img" src="images/bogo1-a.png" alt="Produkt 1A" class="h-full object-contain rounded-lg">
-                    <img id="bogo1-b-img" src="images/bogo1-b.png" alt="Produkt 1B" class="h-full object-contain rounded-lg">
-                </div>
-                <div class="bg-gray-50 p-3 rounded-md text-center text-sm text-gray-700 mt-auto">
-                    <p>Oszczędność: <span class="font-bold">73,75 zł</span> (34,5%)</p>
-                    <p>Wartość PV: <span class="font-bold">29,5</span></p>
+                <div class="flex-grow">
+                    <div class="flex justify-between items-start">
+                        <h3 class="text-sm font-semibold text-[#4a5c44]">Peppermint + Wild Orange</h3>
+                        <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-2">139,75 zł</span>
+                    </div>
+                    <div class="text-xs text-gray-600 mt-2 border-t pt-2">
+                        <p>Oszczędność: <span class="font-bold">73,75 zł</span> (34,5%)</p>
+                        <p>Wartość PV: <span class="font-bold">29,5</span></p>
+                    </div>
                 </div>
             </div>
 
             <!-- KARTA BOGO 2 -->
-            <div id="bogo-card-2" class="bg-white p-4 rounded-lg shadow-lg border-2 border-transparent flex flex-col">
-                <div class="flex justify-between items-start mb-3">
-                    <h3 class="text-lg font-semibold text-[#4a5c44] w-2/3">ZenGest + MetaPWR</h3>
-                    <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-sm">190,00 zł</span>
+            <div id="bogo-card-2" class="bg-white p-3 rounded-lg shadow-lg border-2 border-transparent flex items-center gap-4">
+                <div class="flex-shrink-0 flex items-center justify-center gap-2 w-1/3">
+                    <img id="bogo2-a-img" src="images/bogo2-a.png" alt="Produkt 2A" class="h-20 object-contain">
+                    <img id="bogo2-b-img" src="images/bogo2-b.png" alt="Produkt 2B" class="h-20 object-contain">
                 </div>
-                <div class="flex justify-center items-center gap-4 h-32 mb-4">
-                    <img id="bogo2-a-img" src="images/bogo2-a.png" alt="Produkt 2A" class="h-full object-contain rounded-lg">
-                    <img id="bogo2-b-img" src="images/bogo2-b.png" alt="Produkt 2B" class="h-full object-contain rounded-lg">
-                </div>
-                <div class="bg-gray-50 p-3 rounded-md text-center text-sm text-gray-700 mt-auto">
-                    <p>Oszczędność: <span class="font-bold">153,00 zł</span> (44,6%)</p>
-                    <p>Wartość PV: <span class="font-bold">40,5</span></p>
+                <div class="flex-grow">
+                    <div class="flex justify-between items-start">
+                        <h3 class="text-sm font-semibold text-[#4a5c44]">ZenGest + MetaPWR</h3>
+                        <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-2">190,00 zł</span>
+                    </div>
+                    <div class="text-xs text-gray-600 mt-2 border-t pt-2">
+                        <p>Oszczędność: <span class="font-bold">153,00 zł</span> (44,6%)</p>
+                        <p>Wartość PV: <span class="font-bold">40,5</span></p>
+                    </div>
                 </div>
             </div>
 
             <!-- KARTA BOGO 3 -->
-            <div id="bogo-card-3" class="bg-white p-4 rounded-lg shadow-lg border-2 border-transparent flex flex-col">
-                <div class="flex justify-between items-start mb-3">
-                    <h3 class="text-lg font-semibold text-[#4a5c44] w-2/3">Serenity + Eucalyptus</h3>
-                    <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-sm">221,50 zł</span>
+            <div id="bogo-card-3" class="bg-white p-3 rounded-lg shadow-lg border-2 border-transparent flex items-center gap-4">
+                <div class="flex-shrink-0 flex items-center justify-center gap-2 w-1/3">
+                    <img id="bogo3-a-img" src="images/bogo3-a.png" alt="Produkt 3A" class="h-20 object-contain">
+                    <img id="bogo3-b-img" src="images/bogo3-b.png" alt="Produkt 3B" class="h-20 object-contain">
                 </div>
-                <div class="flex justify-center items-center gap-4 h-32 mb-4">
-                    <img id="bogo3-a-img" src="images/bogo3-a.png" alt="Produkt 3A" class="h-full object-contain rounded-lg">
-                    <img id="bogo3-b-img" src="images/bogo3-b.png" alt="Produkt 3B" class="h-full object-contain rounded-lg">
-                </div>
-                <div class="bg-gray-50 p-3 rounded-md text-center text-sm text-gray-700 mt-auto">
-                    <p>Oszczędność: <span class="font-bold">103,75 zł</span> (31,9%)</p>
-                    <p>Wartość PV: <span class="font-bold">47,0</span></p>
+                <div class="flex-grow">
+                    <div class="flex justify-between items-start">
+                        <h3 class="text-sm font-semibold text-[#4a5c44]">Serenity + Eucalyptus</h3>
+                        <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-2">221,50 zł</span>
+                    </div>
+                    <div class="text-xs text-gray-600 mt-2 border-t pt-2">
+                        <p>Oszczędność: <span class="font-bold">103,75 zł</span> (31,9%)</p>
+                        <p>Wartość PV: <span class="font-bold">47,0</span></p>
+                    </div>
                 </div>
             </div>
 
             <!-- KARTA BOGO 4 -->
-            <div id="bogo-card-4" class="bg-white p-4 rounded-lg shadow-lg border-2 border-transparent flex flex-col">
-                <div class="flex justify-between items-start mb-3">
-                    <h3 class="text-lg font-semibold text-[#4a5c44] w-2/3">Melissa + Blue Tansy</h3>
-                    <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-sm">609,75 zł</span>
+            <div id="bogo-card-4" class="bg-white p-3 rounded-lg shadow-lg border-2 border-transparent flex items-center gap-4">
+                <div class="flex-shrink-0 flex items-center justify-center gap-2 w-1/3">
+                    <img id="bogo4-a-img" src="images/bogo4-a.png" alt="Produkt 4A" class="h-20 object-contain">
+                    <img id="bogo4-b-img" src="images/bogo4-b.png" alt="Produkt 4B" class="h-20 object-contain">
                 </div>
-                <div class="flex justify-center items-center gap-4 h-32 mb-4">
-                    <img id="bogo4-a-img" src="images/bogo4-a.png" alt="Produkt 4A" class="h-full object-contain rounded-lg">
-                    <img id="bogo4-b-img" src="images/bogo4-b.png" alt="Produkt 4B" class="h-full object-contain rounded-lg">
-                </div>
-                <div class="bg-gray-50 p-3 rounded-md text-center text-sm text-gray-700 mt-auto">
-                    <p>Oszczędność: <span class="font-bold">499,00 zł</span> (45,0%)</p>
-                    <p>Wartość PV: <span class="font-bold">116,0</span></p>
+                <div class="flex-grow">
+                    <div class="flex justify-between items-start">
+                        <h3 class="text-sm font-semibold text-[#4a5c44]">Melissa + Blue Tansy</h3>
+                        <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-2">609,75 zł</span>
+                    </div>
+                    <div class="text-xs text-gray-600 mt-2 border-t pt-2">
+                        <p>Oszczędność: <span class="font-bold">499,00 zł</span> (45,0%)</p>
+                        <p>Wartość PV: <span class="font-bold">116,0</span></p>
+                    </div>
                 </div>
             </div>
 
             <!-- KARTA BOGO 5 -->
-            <div id="bogo-card-5" class="bg-white p-4 rounded-lg shadow-lg border-2 border-transparent flex flex-col md:col-span-2">
-                <div class="flex justify-between items-start mb-3">
-                    <h3 class="text-lg font-semibold text-[#4a5c44] w-2/3">Plant Protein: Chocolate + Vanilla</h3>
-                    <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-sm">237,25 zł</span>
+            <div id="bogo-card-5" class="bg-white p-3 rounded-lg shadow-lg border-2 border-transparent flex items-center gap-4 lg:col-span-2">
+                <div class="flex-shrink-0 flex items-center justify-center gap-2 w-1/3">
+                    <img id="bogo5-a-img" src="images/bogo5-a.png" alt="Produkt 5A" class="h-24 object-contain">
+                    <img id="bogo5-b-img" src="images/bogo5-b.png" alt="Produkt 5B" class="h-24 object-contain">
                 </div>
-                <div class="flex justify-center items-center gap-4 h-40 mb-4">
-                    <img id="bogo5-a-img" src="images/bogo5-a.png" alt="Produkt 5A" class="h-full object-contain rounded-lg">
-                    <img id="bogo5-b-img" src="images/bogo5-b.png" alt="Produkt 5B" class="h-full object-contain rounded-lg">
-                </div>
-                <div class="bg-gray-50 p-3 rounded-md text-center text-sm text-gray-700 mt-auto">
-                    <p>Oszczędność: <span class="font-bold">237,25 zł</span> (50,0%)</p>
-                    <p>Wartość PV: <span class="font-bold">28,0</span></p>
+                <div class="flex-grow">
+                    <div class="flex justify-between items-start">
+                        <h3 class="text-sm font-semibold text-[#4a5c44]">Plant Protein: Chocolate + Vanilla</h3>
+                        <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-2">237,25 zł</span>
+                    </div>
+                    <div class="text-xs text-gray-600 mt-2 border-t pt-2">
+                        <p>Oszczędność: <span class="font-bold">237,25 zł</span> (50,0%)</p>
+                        <p>Wartość PV: <span class="font-bold">28,0</span></p>
+                    </div>
                 </div>
             </div>
             
             <!-- PODSUMOWANIE PROMOCJI -->
-            <div id="summary-container" class="md:col-span-2 mt-8 p-2 hidden">
+            <div id="summary-container" class="lg:col-span-2 mt-8 p-2 hidden">
                  <div class="bg-[#d8e4d3] text-[#4a5c44] p-6 rounded-lg shadow-md">
                      <h2 class="text-center text-2xl font-bold mb-4">Łączne podsumowanie promocji BOGO</h2>
                      <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 text-center">
