--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oferta BOGO - Czerwiec 2025</title>
+    <title>Oferta BOGO - Lipiec 2025</title>
     
     <!-- Dołączamy bibliotekę Tailwind CSS do stylizacji -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -43,27 +43,27 @@
     </div>
 
     <!-- GŁÓWNY KONTENER STRONY -->
-    <div id="main-container" class="relative container max-w-5xl my-8 p-4 sm:p-8 md:p-12 bg-white shadow-xl">
+    <div id="main-container" class="relative container max-w-5xl my-8 p-8 sm:p-16 md:p-20 bg-white shadow-xl">
 
         <!-- GRAFIKI TŁA (LIŚCIE) -->
         <img 
             src="images/liscie-gora.jpg" 
             alt="Dekoracyjne liście" 
-            class="absolute top-0 left-0 w-1/3 opacity-40 pointer-events-none"
+            class="absolute top-0 left-0 w-1/3 opacity-50 pointer-events-none z-0"
             onerror="this.style.display='none'"
         >
         <img 
             src="images/liscie-dol.jpg" 
             alt="Dekoracyjne liście" 
-            class="absolute bottom-0 right-0 w-1/3 opacity-40 pointer-events-none"
+            class="absolute bottom-0 right-0 w-1/3 opacity-50 pointer-events-none z-0"
             onerror="this.style.display='none'"
         >
 
         <!-- NAGŁÓWEK STRONY -->
         <header id="header-container" class="text-center mb-12 md:mb-16 relative z-10 p-2">
             <div class="bg-[#d8e4d3] py-4 rounded-lg shadow">
-                 <h1 class="text-3xl md:text-4xl font-bold text-[#4a5c44]">Promocja BOGO - Czerwiec 2025</h1>
-                 <p class="text-lg text-[#4a5c44] mt-2">Kup jeden produkt, a drugi otrzymasz GRATIS!</p>
+                 <h1 class="text-3xl md:text-4xl font-bold text-[#4a5c44]">Promocja BOGO - Lipiec 2025</h1>
+                 <p class="text-lg text-[#4a5c44] mt-2">Kup jeden produkt, a drugi otrzymasz GRATIS</p>
             </div>
         </header>
 
