--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- GŁÓWNY KONTENER STRONY -->
-    <div id="main-container" data-debug-border="border-4 border-black" class="relative container max-w-5xl my-8 p-8 sm:p-16 md:p-20 bg-white shadow-xl rounded-lg">
+    <div id="main-container" data-debug-border="border-4 border-black" class="relative container max-w-5xl my-8 p-4 sm:p-16 md:p-20 bg-white shadow-xl rounded-lg">
 
         <!-- GRAFIKI TŁA (LIŚCIE) -->
         <img 
@@ -85,7 +85,7 @@
     <div id="summary-template" class="lg:col-span-2 mt-8 p-2" data-debug-border="border-2 border-lime-500" style="display: none;">
          <div class="bg-[#d8e4d3] text-[#4a5c44] p-6 rounded-lg shadow-md">
              <h2 class="text-center text-2xl font-bold mb-4">Łączne podsumowanie promocji BOGO</h2>
-             <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 text-center">
+             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 text-center">
                  <div>
                      <p class="font-semibold text-lg">Łączna cena BOGO</p>
                      <p id="total-price" class="text-xl font-bold">0 zł</p>
@@ -179,12 +179,13 @@
                 const cardLayoutClass = offer.spanFull ? 'lg:col-span-2' : '';
                 const imageSizeClass = offer.spanFull ? 'h-24' : 'h-20';
                 
+                // Zmieniono 'flex' na 'flex-col sm:flex-row' aby na małych ekranach układ był pionowy
                 return `
                     <div 
-                        class="bogo-card bg-white p-3 rounded-lg shadow-lg border-2 border-transparent flex items-center gap-4 ${cardLayoutClass}"
+                        class="bogo-card bg-white p-4 rounded-lg shadow-lg border-2 border-transparent flex flex-col sm:flex-row items-center gap-4 ${cardLayoutClass}"
                         data-debug-border="border-green-500"
                     >
-                        <div class="flex-shrink-0 flex items-center justify-center gap-2 w-1/3">
+                        <div class="flex-shrink-0 flex items-center justify-center gap-2 w-full sm:w-1/3 mb-4 sm:mb-0">
                             <img 
                                 src="${offer.img1}" 
                                 alt="${offer.name} - produkt kupowany" 
@@ -200,10 +201,10 @@
                                 onerror="this.src='https://placehold.co/150x150/f8d7da/d9534f?text=Błąd'"
                             >
                         </div>
-                        <div class="flex-grow">
-                            <div class="flex justify-between items-start">
-                                <h3 class="text-sm font-semibold text-[#4a5c44]">${offer.name}</h3>
-                                <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-2">${offer.price.toFixed(2)} zł</span>
+                        <div class="flex-grow w-full text-center sm:text-left">
+                            <div class="flex flex-col sm:flex-row justify-between items-center sm:items-start">
+                                <h3 class="text-sm font-semibold text-[#4a5c44] mb-2 sm:mb-0">${offer.name}</h3>
+                                <span class="bg-[#cce2d3] text-[#4a5c44] font-bold py-1 px-3 rounded-full text-xs whitespace-nowrap ml-0 sm:ml-2">${offer.price.toFixed(2)} zł</span>
                             </div>
                             <div class="text-xs text-gray-600 mt-2 border-t pt-2">
                                 <p>Oszczędność: <span class="font-bold">${offer.savings.toFixed(2)} zł</span> (${savingsPercent}%)</p>
@@ -250,10 +251,11 @@
 
             // --- LOGIKA PRZEŁĄCZNIKA RAMEK (DEBUG) ---
             const toggleSwitch = document.getElementById('toggleBorders');
-            const debugElements = document.querySelectorAll('[data-debug-border]');
-
+            
             function toggleBorders() {
                 const show = toggleSwitch.checked;
+                // Musimy ponownie wyszukać elementy po dynamicznym dodaniu
+                const debugElements = document.querySelectorAll('[data-debug-border]');
                 debugElements.forEach(element => {
                     const classes = element.getAttribute('data-debug-border').split(' ');
                     if (show) {
