podglad podczas udostepnniania linka

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oferta BOGO - Lipiec 2025</title>
+
+    <!-- === META TAGI OPEN GRAPH DLA PODGLĄDU W MEDIACH SPOŁECZNOŚCIOWYCH === -->
+    <!-- Zmień poniższe wartości, aby dostosować podgląd udostępnianego linku -->
+    <meta property="og:title" content="Promocja BOGO - Lipiec 2025">
+    <meta property="og:description" content="Kup jeden produkt, a drugi otrzymasz GRATIS!">
+    <meta property="og:image" content="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-social-preview.png">
+    <meta property="og:url" content="https://emilia-chodorowska.github.io/BOGO/">
+    <meta property="og:type" content="website">
+    <!-- ======================================================================= -->
     
     <!-- Dołączamy bibliotekę Tailwind CSS do stylizacji -->
     <script src="https://cdn.tailwindcss.com"></script>
