src plikow do bogo bundle

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             data-debug-border="border-green-500" 
         >
             <div class="flex-shrink-0 flex items-center justify-center gap-2 w-full sm:w-1/3 mb-4 sm:mb-0">
-                <img src="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-box.png" alt="Zestaw BOGO" class="h-24 object-contain" data-debug-border="border-2 border-orange-500" onerror="this.src='https://placehold.co/150x150/f0f0f0/333?text=Zestaw'">
-                <img src="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/czapka.png" alt="Czapka z daszkiem" class="h-24 object-contain" data-debug-border="border-2 border-orange-500" onerror="this.src='https://placehold.co/150x150/f8d7da/d9534f?text=Błąd'">
+                <img src="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-budle-a.svg" alt="Zestaw BOGO" class="h-24 object-contain" data-debug-border="border-2 border-orange-500" onerror="this.src='https://placehold.co/150x150/f0f0f0/333?text=Zestaw'">
+                <img src="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-budle-b.svg" alt="Gratisowy produkt" class="h-24 object-contain" data-debug-border="border-2 border-orange-500" onerror="this.src='https://placehold.co/150x150/f8d7da/d9534f?text=Błąd'">
             </div>
             <div class="flex-grow w-full text-center sm:text-left">
                 <h3 class="text-sm font-semibold text-[#4a5c44] mb-2">Dodaj Zestaw BOGO do koszyka, aby otrzymać wszystkie pary wraz z DARMOWĄ Bawełnianą Czapką dōTERRA</h3>
