--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body class="bg-gray-50 flex items-center justify-center min-h-screen py-8">
 
     <!-- SUWAK DO WŁĄCZANIA/WYŁĄCZANIA RAMEK (DEBUGOWANIE) -->
-    <div class="fixed top-4 left-4 z-50">
+    <div class="fixed top-4 left-4 z-50 hidden">
         <label for="toggleBorders" class="flex items-center cursor-pointer">
             <div class="relative">
                 <input type="checkbox" id="toggleBorders" class="toggle-checkbox sr-only" role="switch" aria-checked="false">
