--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Dołączamy favicon -->
+    <link rel="icon" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/logo-bogo.png" type="image/x-icon">
     
     <style>
         /* Dodajemy niestandardową czcionkę do projektu */
