--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!-- Dołączamy favicon -->
-    <link rel="icon" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/logo-bogo.png" type="image/x-icon">
+    <!-- === FAVICON === -->
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/favicon.ico">
+    <link rel="icon" sizes="192x192" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/android-chrome-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/favicon-16x16.png">
+
     
     <style>
         /* Dodajemy niestandardową czcionkę do projektu */
