usunelam wyjatkowe oferty :D

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Oferta BOGO - Lipiec 2025</title>
 
     <!-- === META TAGI OPEN GRAPH DLA PODGLĄDU W MEDIACH SPOŁECZNOŚCIOWYCH === -->
-    <meta property="og:title" content="Promocja BOGO - Lipiec 2025 | Wyjątkowe Oferty">
-    <meta property="og:description" content="Kup jeden produkt, a drugi otrzymasz GRATIS! Sprawdź wyjątkowe oferty BOGO na olejki eteryczne i suplementy.">
+    <meta property="og:title" content="Promocja BOGO - Lipiec 2025">
+    <meta property="og:description" content="Kup jeden produkt, a drugi otrzymasz GRATIS!">
     <meta property="og:image" content="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-social-preview.png">
     <meta property="og:url" content="https://emilia-chodorowska.github.io/BOGO/">
     <meta property="og:type" content="website">
