zaamiana promocja na oferta

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Oferta BOGO - Lipiec 2025</title>
 
     <!-- === META TAGI OPEN GRAPH DLA PODGLĄDU W MEDIACH SPOŁECZNOŚCIOWYCH === -->
-    <meta property="og:title" content="Promocja BOGO - Lipiec 2025">
+    <meta property="og:title" content="Oferta BOGO - Lipiec 2025">
     <meta property="og:description" content="Kup jeden produkt, a drugi otrzymasz GRATIS!">
     <meta property="og:image" content="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-social-preview.png">
     <meta property="og:url" content="https://emilia-chodorowska.github.io/BOGO/">
@@ -87,7 +87,7 @@
         <!-- NAGŁÓWEK STRONY -->
         <header id="header-container" data-debug-border="border-2 border-red-500" class="text-center mb-12 md:mb-16 relative z-10 p-2">
             <div class="bg-[#d8e4d3] py-4 rounded-lg shadow">
-                 <h1 class="text-3xl md:text-4xl font-bold text-[#4a5c44]">Promocja BOGO - Lipiec 2025</h1>
+                 <h1 class="text-3xl md:text-4xl font-bold text-[#4a5c44]">Oferta BOGO - Lipiec 2025</h1>
                  <p class="text-lg text-[#4a5c44] mt-2">Kup jeden produkt, a drugi otrzymasz GRATIS</p>
             </div>
         </header>
