--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <header id="header-container" data-debug-border="border-2 border-red-500" class="text-center mb-12 md:mb-16 relative z-10 p-2">
             <div class="bg-[#d8e4d3] py-4 rounded-lg shadow">
                  <h1 class="text-3xl md:text-4xl font-bold text-[#4a5c44]">Oferta BOGO - Lipiec 2025</h1>
-                 <p class="text-lg text-[#4a5c44] mt-2">Kup jeden produkt, a drugi otrzymasz GRATIS</p>
+                 <p class="text-lg text-[#4a5c44] mt-2">Zamów jeden produkt, a drugi otrzymasz GRATIS</p>
             </div>
         </header>
 
