--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- === META TAGI OPEN GRAPH Z TREŚCIĄ WPISANĄ STATYCZNIE === -->
     <meta property="og:title" content="Oferta BOGO - Lipiec 2025">
-    <meta property="og:description" content="Zamów jeden produkt, a drugi otrzymasz GRATIS!">
+    <meta property="og:description" content="Zamów jeden produkt, a drugi otrzymasz GRATIS">
     <meta property="og:image" content="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-social-preview.png">
     <meta property="og:url" content="https://emilia-chodorowska.github.io/BOGO/">
     <meta property="og:type" content="website">
@@ -158,7 +158,7 @@
             // Te dane są używane do wypełnienia treści na stronie (h1, p) i dla przycisku udostępniania.
             const pageConfig = {
                 title: "Oferta BOGO - Lipiec 2025",
-                description: "Zamów jeden produkt, a drugi otrzymasz GRATIS!",
+                description: "Zamów jeden produkt, a drugi otrzymasz GRATIS",
                 url: "https://emilia-chodorowska.github.io/BOGO/"
             };
 
