--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- === META TAGI OPEN GRAPH Z TREŚCIĄ WPISANĄ STATYCZNIE === -->
     <meta property="og:title" content="Oferta BOGO - Lipiec 2025">
-    <meta property="og:description" content="Zamów jeden produkt, a drugi otrzymasz GRATIS!">
+    <meta property="og:description" content="Zamów jeden produkt, a drugi otrzymasz GRATIS">
     <meta property="og:image" content="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-social-preview.png">
     <meta property="og:url" content="https://emilia-chodorowska.github.io/BOGO/">
     <meta property="og:type" content="website">
@@ -90,7 +90,7 @@
             <div class="bg-[#d8e4d3] py-4 rounded-lg shadow">
                  <div>
                     <h1 id="page-main-title" class="text-3xl md:text-4xl font-bold text-[#4a5c44]">Oferta BOGO - Lipiec 2025</h1>
-                    <p id="page-main-description" class="text-lg text-[#4a5c44] mt-2">Zamów jeden produkt, a drugi otrzymasz GRATIS!</p>
+                    <p id="page-main-description" class="text-lg text-[#4a5c44] mt-2">Zamów jeden produkt, a drugi otrzymasz GRATIS</p>
                  </div>
             </div>
         </header>
