inny opis na sociale, separator zamiast myslinika

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Oferta BOGO - Lipiec 2025</title>
 
     <!-- === META TAGI OPEN GRAPH Z TREŚCIĄ WPISANĄ STATYCZNIE === -->
-    <meta property="og:title" content="Oferta BOGO - Lipiec 2025">
+    <meta property="og:title" content="Oferta BOGO | Lipiec 2025">
     <meta property="og:description" content="Zamów jeden produkt, a drugi otrzymasz GRATIS">
     <meta property="og:image" content="https://raw.githubusercontent.com/emilia-chodorowska/BOGO/main/images/bogo-social-preview.png">
     <meta property="og:url" content="https://emilia-chodorowska.github.io/BOGO/">
