jeszcze raz w innym miejscu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Tytuł ustawiony statycznie dla robotów i przeglądarki -->
-    <title>Oferta BOGO - Lipiec 2025</title>
+    <title>Oferta BOGO | Lipiec 2025</title>
 
     <!-- === META TAGI OPEN GRAPH Z TREŚCIĄ WPISANĄ STATYCZNIE === -->
     <meta property="og:title" content="Oferta BOGO | Lipiec 2025">
